# LCAS

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  advanced_pattern_discovery_plugin.py  ai_foundation_plugin.py  ai_integration_module.py  content_extraction_plugin.py  enhanced_ai_plugin.py  enhanced_lcas_gui.py  enhanced_lcas_gui_v4.py  enhanced_lcas_gui_v4_complete.py  enhanced_lcas_main.py  gui_preservation_integration.py  image_analysis_plugin.py  installatation.py  lcas_config.json  lcas_core.py  lcas_gui.py  lcas_gui_modular.py  lcas_main.py  makefile.py  pattern_discovery_plugin.py  pyproject.toml  requirements.txt  requirements_and_setup.py  run_lcas_script.py  setup.py  timeline_builder_plugin.py  vertical_slice_architecture.py
LCAS_2/: README.md
LCAS_2/lcas2/: main.py
LCAS_2/lcas2/core/: __init__.py  core.py  data_models.py
LCAS_2/lcas2/gui/: __init__.py  main_gui.py
LCAS_2/lcas2/plugins/: __init__.py  ai_integration_plugin.py  case_management_plugin.py  content_extraction_plugin.py  evidence_categorization_plugin.py  evidence_scoring_plugin.py  file_ingestion_plugin.py  hash_generation_plugin.py  image_analysis_plugin.py  lcas_ai_wrapper_plugin.py  legal_prompt_templates_module.py  pattern_discovery_plugin.py  report_generation_plugin.py  timeline_analysis_plugin.py
LCAS_2/lcas_adk_agents/: .env.example  __init__.py  content_extraction_agent.py  data_models.py  file_processing_agent.py  main_coordinator_agent.py  test_basic_workflow.py
LCAS_2/tests/: __init__.py  test_utils.py
lcas/: __init__.py  cli.py  core.py  gui.py  main.py  utils.py
lcas/plugins/: __init__.py
plugins/: __init__.py  ai_integration_plugin.py  evidence_categorization_plugin.py  file_ingestion_plugin.py  hash_generation_plugin.py  lcas_ai_wrapper_plugin.py  pattern_discovery_plugin.py  report_generation_plugin.py  timeline_analysis_plugin.py
scripts/: build.py  install.py
tests/: __init__.py  test_core.py  test_utils.py
