[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcas"
version = "4.0.0"
description = "Legal Case Analysis System - AI-Powered Evidence Organization"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "LCAS Development Team", email = "support@lcas.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal",
    "Topic :: Office/Business :: Legal",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "PyPDF2>=3.0.1",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.2",
    "requests>=2.31.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.21.0",
    "httpx>=0.25.0",
]
advanced = [
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.2",
    "spacy>=3.7.0",
    "scikit-learn>=1.3.0",
]
gui = [
    "customtkinter>=5.2.0",
    "pillow>=10.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]

[project.scripts]
lcas = "lcas.main:main"
lcas-gui = "lcas.gui:main"
lcas-cli = "lcas.cli:main"

[project.urls]
Homepage = "https://github.com/ahouse2/LCAS"
Repository = "https://github.com/ahouse2/LCAS"
Documentation = "https://github.com/ahouse2/LCAS/docs"
"Bug Tracker" = "https://github.com/ahouse2/LCAS/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lcas*"]

[tool.setuptools.package-data]
lcas = ["config/*.yaml", "config/*.json", "templates/*.html", "static/*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=lcas --cov-report=html --cov-report=term-missing"